Closed
Bug 1363395
Opened 8 years ago
Closed 8 years ago
Crash in nsGlobalWindow::Location
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | fixed |
People
(Reporter: calixte, Assigned: baku)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file, 2 obsolete files)
7.28 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-0a57cec6-33e6-4415-be44-157120170509.
=============================================================
There are 2 crahes from the same installation in nightly 55 with buildid 20170509030205. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix 1362003.
[1] https://hg.mozilla.org/mozilla-central/rev?node=9e2bc7a6959b2b9de8bfec2370c66e1d3a6d0cdc
Flags: needinfo?(amarchesini)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 1•8 years ago
|
||
Attachment #8865880 -
Flags: review?(bugs)
Comment 2•8 years ago
|
||
Comment on attachment 8865880 [details] [diff] [review]
crash1.patch
The name of the method is now wrong. It should be GetLocation() since it may return null.
Attachment #8865880 -
Flags: review?(bugs) → review-
Assignee | ||
Comment 3•8 years ago
|
||
Attachment #8865880 -
Attachment is obsolete: true
Attachment #8865927 -
Flags: review?(bugs)
Assignee | ||
Comment 4•8 years ago
|
||
Attachment #8865927 -
Attachment is obsolete: true
Attachment #8865927 -
Flags: review?(bugs)
Attachment #8865928 -
Flags: review?(bugs)
Updated•8 years ago
|
Attachment #8865928 -
Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/dfa904c74509
nsGlobalWindow::GetLocation should support to be called on the outer window, r=smaug
Updated•8 years ago
|
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
Comment 6•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•