Bug 1363395 - nsGlobalWindow::GetLocation should support to be called on the outer window, r=smaug